--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -327,15 +327,15 @@ end</pre>
 <script>
 var winkVideoData = {
 dataVersion: 1,
-frameRate: 10,
-buttonFrameLength: 5,
-buttonFrameOffset: 2,
+frameRate: 20,
+buttonFrameLength: 10,
+buttonFrameOffset: 5,
 frameStops: {
 },
 };
 </script>
 <div class="winkVideoContainerClass"><video class="winkVideoClass" data-dirname="/static" data-varname="winkVideoData" height="800" width="1200">
-<source src="./../downloads/2288.mp4" type="video/mp4"/></video>
+<source src="./../downloads/零件.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
