--- a/content/H2.html
+++ b/content/H2.html
@@ -140,7 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>H2</h1>
-<br />W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+<p>四連桿零件尺寸圖:<a href="https://drive.google.com/file/d/1U9BLFsPTiLHcdEjrS513FXmUpSrqOyGJ/view?usp=sharing">連結</a></p><br />W11 << <a href='W11.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
